examples/fail/type_mismatch.uplp
category = "error"

[metadata]
error = "Type.mismatch"

[metadata.expectation]
t1 = "Unit"
t2 = "Num"
---
1 + ()